--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	<!-- Home --> <!-- "background-image:url(images/home.jpg)" -->
 
 	<div class="home">
-		<div class="home_background" style=#></div>
+		<div class="home_background" style="background-color:#5579DB"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
 				<div class="home_text_large"></div>
