--- a/destino/resources.html
+++ b/destino/resources.html
@@ -147,6 +147,29 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="find">
+		<!-- Image by https://unsplash.com/@garciasaldana_ -->
+		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div>
+		<div class="container">
+<!-- 			<div class="row">
+				<div class="col-12">
+					<div class="find_title text-center">Find Resources Near You</div>
+				</div>
+				<div class="col-12">
+					<div class="find_form_container">
+						<form action="#" id="find_form" class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">
+							<div class="find_item">
+								<div>Location: </div>
+								<input type="text" class="destination find_input" required="required" placeholder="Keyword here">
+							</div>
+							<button class="button find_button"><a href="resources.html">Find</a></button>
+						</form>
+					</div>
+				</div>
+			</div> -->
+		</div>
+	</div>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
