--- a/destino/resources.html
+++ b/destino/resources.html
@@ -144,6 +144,37 @@
 				    </tr>
 				  </tbody>
 				</table>
+				
+				<table class="table table-dark">
+				  <thead>
+				    <tr>
+				      <th scope="col">#</th>
+				      <th scope="col">Category</th>
+				      <th scope="col">Resource</th>
+				      <th scope="col">Location</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <th scope="row">1</th>
+				      <td>Transportation</td>
+				      <td>X</td>
+				      <td>.</td>
+				    </tr>
+				    <tr>
+				      <th scope="row">2</th>
+				      <td>Transportation</td>
+				      <td>Y</td>
+				      <td>.</td>
+				    </tr>
+				    <tr>
+				      <th scope="row">3</th>
+				      <td>Transportation</td>
+				      <td>Z</td>
+				      <td>.</td>
+				    </tr>
+				  </tbody>
+				</table>
 			</div>
 		</div>
 	</div>
