--- a/destino/index.html
+++ b/destino/index.html
@@ -132,7 +132,7 @@
 						<form action="#" id="find_form" class="find_form d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-md-between justify-content-start flex-wrap">
 							<div class="find_item">
 								<div>Location: </div>
-								<input type="text" class="destination find_input" required="required" placeholder="Keyword here">
+								<input type="text" class="destination find_input" required="required" placeholder="Seattle, WA">
 							</div>
 							<button class="button find_button"><a href="resources.html">Find</a></button>
 						</form>
