--- a/destino/index.html
+++ b/destino/index.html
@@ -134,7 +134,7 @@
 								<div>Location: </div>
 								<input type="text" class="destination find_input" required="required" placeholder="Seattle, WA">
 							</div>
-							<button class="button find_button"><a href="resources.html">Find</a></button>
+							<button class="button find_button"><a href="form.html">Find</a></button>
 						</form>
 					</div>
 				</div>
