--- a/destino/form.html
+++ b/destino/form.html
@@ -118,6 +118,35 @@
 	</div>
 
 	<!-- Find Form -->
+	
+	<h2>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h2>
+	
+	<form>
+  		<input type="radio" name="gender" value="Male" checked> Male<br>
+  		<input type="radio" name="gender" value="Female"> Female<br>
+  		<input type="radio" name="gender" value="Other"> Other  
+	</form> 
+	
+	<h2>Are you married or single?</h2>
+	
+	<form>
+  		<input type="radio" name="gender" value="Married" checked> Male<br>
+  		<input type="radio" name="gender" value="Single"> Female<br>
+	</form> 
+	
+	<h2>Do you have a criminal record? (we need to ask this since some shelters don’t allow this)</h2>
+	
+	<form>
+  		<input type="radio" name="gender" value="Yes" checked> Male<br>
+  		<input type="radio" name="gender" value="No"> Female<br>
+	</form> 
+	
+	<h2>Do you need interpreter services? (is English your first language?)</h2>
+	
+	<form>
+  		<input type="radio" name="gender" value="Yes" checked> Male<br>
+  		<input type="radio" name="gender" value="No"> Female<br>
+	</form> 
   
   
 
