--- a/destino/form.html
+++ b/destino/form.html
@@ -119,7 +119,7 @@
 
 	<!-- Find Form -->
 	
-	<h2>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h2>
+	<h3>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h3>
 	
 	<form>
   		<input type="radio" name="gender" value="Male" checked> Male<br>
@@ -127,25 +127,25 @@
   		<input type="radio" name="gender" value="Other"> Other  
 	</form> 
 	
-	<h2>Are you married or single?</h2>
+	<h3>Are you married or single?</h3>
 	
 	<form>
-  		<input type="radio" name="gender" value="Married" checked> Male<br>
-  		<input type="radio" name="gender" value="Single"> Female<br>
+  		<input type="radio" name="gender" value="Married" checked> Married<br>
+  		<input type="radio" name="gender" value="Single"> Single<br>
 	</form> 
 	
-	<h2>Do you have a criminal record? (we need to ask this since some shelters don’t allow this)</h2>
+	<h3>Do you have a criminal record? (we need to ask this since some shelters don’t allow this)</h3>
 	
 	<form>
-  		<input type="radio" name="gender" value="Yes" checked> Male<br>
-  		<input type="radio" name="gender" value="No"> Female<br>
+  		<input type="radio" name="gender" value="Yes" checked> Yes<br>
+  		<input type="radio" name="gender" value="No"> No<br>
 	</form> 
 	
-	<h2>Do you need interpreter services? (is English your first language?)</h2>
+	<h3>Do you need interpreter services? (is English your first language?)</h3>
 	
 	<form>
-  		<input type="radio" name="gender" value="Yes" checked> Male<br>
-  		<input type="radio" name="gender" value="No"> Female<br>
+  		<input type="radio" name="gender" value="Yes" checked> Yes<br>
+  		<input type="radio" name="gender" value="No"> No<br>
 	</form> 
   
   
