--- a/destino/form.html
+++ b/destino/form.html
@@ -113,8 +113,10 @@
 		<div class="home_background" style="background-color:#5579DB"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
-					<h5>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h5>
-	
+				<h1>Please Give Us Some More Information</h1>
+
+	<h5>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h5>
+
 	<form>
   		<input type="radio" name="gender" value="Male" checked> Male<br>
   		<input type="radio" name="gender" value="Female"> Female<br>
