--- a/destino/form.html
+++ b/destino/form.html
@@ -137,7 +137,7 @@
   		<input type="radio" name="gender" value="No"> No<br>
 	</form> 
 	
-	<h5>Do you need interpreter services? (is English your first language?)</h5>
+	<h5>Do you need interpreter services? (is English not your first language?)</h5>
 	
 	<form>
   		<input type="radio" name="gender" value="Yes" checked> Yes<br>
