--- a/destino/form.html
+++ b/destino/form.html
@@ -143,6 +143,7 @@
 			</div>
 		</div>
 	</div>
+	<button class="button find_button"><a href="resources.html">Next</a></button>
 
 	<!-- Find Form -->
   
