--- a/destino/form.html
+++ b/destino/form.html
@@ -110,7 +110,7 @@
 		<div class="home_background" style="background-color:#5579DB"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
-				<h1>Please Give Us Some More Information</h1>
+				<h3>Some More Information!</h3>
 
 	<h5>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h5>
 
