--- a/destino/resources.html
+++ b/destino/resources.html
@@ -114,6 +114,7 @@
 		<div class="home_background" style="background-color:#5579DB"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
+				<h3> Results for: Seattle, WA </h3>
 				<table class="table table-dark">
 				  <thead>
 				    <tr>
@@ -124,24 +125,25 @@
 				    </tr>
 				  </thead>
 				  <tbody>
+					<tr>
+				      <th scope="row">3</th>
+				      <td>Shelters</td>
+				      <td>Bread of Life Mission</td>
+				      <td>97 S Main St</td>
+				    </tr>
 				    <tr>
 				      <th scope="row">1</th>
-				      <td>Food</td>
-				      <td>X</td>
-				      <td>.</td>
+				      <td>Shelters</td>
+				      <td>Mary's Place</td>
+				      <td>113 Dexter Ave N.</td>
 				    </tr>
 				    <tr>
 				      <th scope="row">2</th>
-				      <td>Food</td>
-				      <td>Y</td>
-				      <td>.</td>
+				      <td>Shelters</td>
+				      <td>Share/Wheel</td>
+				      <td>1902 2nd Ave</td>
 				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Food</td>
-				      <td>Z</td>
-				      <td>.</td>
-				    </tr>
+
 				  </tbody>
 				</table>
 			
