--- a/destino/form.html
+++ b/destino/form.html
@@ -149,7 +149,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div class="find_title text-center">Find Resources Near You</div>
+					<div class="find_title text-center"></div>
 				</div>
 				<div class="col-12">
 					<div class="find_form_container">
