--- a/destino/form.html
+++ b/destino/form.html
@@ -143,9 +143,9 @@
 
 	<!-- Find Form -->
 	
-	<div class="find">
+<!-- 	<div class="find"> -->
 		<!-- Image by https://unsplash.com/@garciasaldana_ -->
-		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div>
+<!-- 		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
@@ -157,7 +157,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
   
   
 
