--- a/destino/form.html
+++ b/destino/form.html
@@ -142,10 +142,9 @@
 	
 
 	<!-- Find Form -->
-	
-<!-- 	<div class="find"> -->
+	<div class="find">
 		<!-- Image by https://unsplash.com/@garciasaldana_ -->
-<!-- 		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div>
+		<div class="find_background parallax-window" data-parallax="scroll" data-image-src="images/find.jpg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
