--- a/destino/resources.html
+++ b/destino/resources.html
@@ -83,9 +83,9 @@
 					</form>
 				</div>
 				<ul class="menu_list menu_mm">
-					<li class="menu_item menu_mm"><a href="#">Home</a></li>
+					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 					<li class="menu_item menu_mm"><a href="about.html">About Us</a></li>
-					<li class="menu_item menu_mm"><a href="offers.html">Feedback</a></li>
+					<li class="menu_item menu_mm"><a href="feedback.html">Feedback</a></li>
 <!-- 					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li> -->
 				</ul>
