--- a/destino/form.html
+++ b/destino/form.html
@@ -116,8 +116,8 @@
 	<h5>What gender do you identify as? (we need to ask this since some shelters only accept women or men)</h5>
 
 	<form>
-  		<input type="radio" name="gender" value="Male" checked> Male<br>
-  		<input type="radio" name="gender" value="Female"> Female<br>
+  		<input type="radio" name="gender" value="Male"> Male<br>
+  		<input type="radio" name="gender" value="Female" checked> Female<br>
   		<input type="radio" name="gender" value="Other"> Other  
 	</form> 
 	
