--- a/destino/form.html
+++ b/destino/form.html
@@ -41,7 +41,7 @@
 							<ul class="main_nav_list">
 								<li class="main_nav_item active"><a href="#">Home</a></li>
 								<li class="main_nav_item"><a href="about.html">About Us</a></li>
-								<li class="main_nav_item"><a href="offers.html">Feedback</a></li>
+								<li class="main_nav_item"><a href="feedback.html">Feedback</a></li>
 <!-- 								<li class="main_nav_item"><a href="news.html">News</a></li>
 								<li class="main_nav_item"><a href="contact.html">Contact</a></li> -->
 							</ul>
