--- a/destino/index.html
+++ b/destino/index.html
@@ -32,7 +32,7 @@
 							<div class="logo">
 								<div></div>
 								<div></div>
-								<div class="logo_image"><img src="img/c3logo.png" alt=""></div>
+								<div class="logo_image"><img src="images/c3logo.png" alt=""></div>
 							</div>
 						</div>
 
