--- a/destino/index.html
+++ b/destino/index.html
@@ -113,6 +113,9 @@
 		<div class="home_background" style="background-color:#5579DB"></div>
 		<div class="home_content">
 			<div class="home_content_inner">
+				<div class="main-body">
+                            <a href="form.html"><img src="images/feedback-logo.png" alt=""></a>
+                        </div>
 			</div>
 		</div>
 	</div>
