--- a/destino/index.html
+++ b/destino/index.html
@@ -114,7 +114,7 @@
 		<div class="home_content">
 			<div class="home_content_inner">
 				<div class="main-body">
-                            <a href="form.html"><img src="images/feedback-logo.png" alt=""></a>
+                            <a href="form.html"><img src="images/feedback-logo.png" alt="" width="200" height="300"></a>
                         </div>
 			</div>
 		</div>
